--- a/app/src/main/res/layout/activity_main_web_store.xml
+++ b/app/src/main/res/layout/activity_main_web_store.xml
@@ -4,45 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".webstore.MainWebStoreActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/web_store"
-        android:id="@+id/web_store_title"
-        android:layout_gravity="center_horizontal" />
+        android:id="@+id/web_store_toolbar"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        android:transitionName="actionBar">
+
+    </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:id="@+id/fragment_layout">
 
-        <ImageButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:id="@+id/entry_input_button"
-            android:src="@drawable/ic_add_black_24dp"
-            android:layout_gravity="center_horizontal|bottom" />
     </FrameLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <ImageButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:id="@+id/cart_button"
-            android:src="@drawable/ic_shopping_cart_black_24dp"
-            android:layout_gravity="center_horizontal|top"
-            android:contentDescription="@string/cart_button_description" />
-    </FrameLayout>
 
 </LinearLayout>
