--- a/app/src/main/res/layout/store_content_item.xml
+++ b/app/src/main/res/layout/store_content_item.xml
@@ -7,7 +7,8 @@
     android:orientation="horizontal">
     <TextView
         android:id="@+id/product_name_field"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_weight="3"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:text=""
@@ -15,11 +16,18 @@
     </TextView>
     <TextView
         android:id="@+id/product_price_field"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_weight="3"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="25dp"
         android:text=""
         android:textSize="20sp">
     </TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
+        android:text=""
+        android:id="@+id/product_date_field"/>
 </LinearLayout>
