--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorAccent">@color/colorSandAccent</item>
     </style>
 
-    <style name="WebStoreTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="WebStoreTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
