--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.acterics.sandbox.webstore.database.CartFragment">
+    tools:context=".webstore.FragmentCart">
 
    <TextView
        android:layout_width="match_parent"
